<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Введи название преступления</string>
    <string name="crime_title_label">Название</string>
    <string name="crime_details_label">Детали</string>
    <string name="crime_solved_label">Решено</string>
    <string name="crime_date_label">Дата</string>
    <string name="police">Вызвать полицию!</string>
    <string name="change_date">Сменить дату</string>
    <string name="new_crime">Новое приступление</string>
    <string name="crime_empty">Преступлений пока нет</string>
    <string name="add_new_crime">Добавить новое приступление</string>
    <string name="change_time">Сменить время</string>
    <string name="crime_time_label">время</string>
    <string name="crime_suspect">Выбрать подозреваемого</string>
    <string name="send_report_text">Отправить текстовый отчет</string>
    <string name="crime_report">%1$s! Преступление было обнаружено %2$s. %3$s - %4$s, и %5$s</string>
    <string name="crime_report_solved">Преступление решено</string>
    <string name="crime_report_unsolved">Преступление не решено</string>
    <string name="crime_report_no_suspect">нет подозреваемого.</string>
    <string name="crime_report_suspect">подозреваемый это - %s.</string>
    <string name="crime_report_subject">Отчет о преступлении</string>
    <string name="send_report">Отправить отчет через...</string>
    <string name="call_suspect">Позвонить подозреваемому</string>
</resources>